@@ -202,6 +202,10 @@
 						-Xdebug
 						-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8000
 					</jvmArguments>
+					<profiles>
+						<profile>prod</profile>
+						<profile>dev</profile>
+					</profiles>
 				</configuration>
 				<executions>
 					<execution>
@@ -222,20 +226,19 @@
 		</plugins>
 	</build>
 
+	<!-- profile to add command line arguments and environment variables to runtime -->
 	<profiles>
 		<profile>
 			<id>jdk8-build</id>
 			<activation>
-				<jdk>8</jdk>
+				<jdk>1.8</jdk>
 			</activation>
 			<build>
 				<plugins>
 					<plugin>
 						<artifactId>maven-surefire-plugin</artifactId>
+						<version>2.22.0</version>
 						<configuration>
-							<argLine>--add-modules java.xml.bind --add-opens
-								java.base/java.lang=ALL-UNNAMED</argLine>
-
 							<environmentVariables>
 								<GOOGLE_APPLICATION_CREDENTIALS>${basedir}/BMH-EDGE-7fbcada789e1.json</GOOGLE_APPLICATION_CREDENTIALS>
 							</environmentVariables>
